メッセージの追加

--- a/Github_example.ipynb
+++ b/Github_example.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Github-example.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOE9sRkYTaXQ2eK44BudQD9"
+      "authorship_tag": "ABX9TyPDyVQmfa6LcEKBOGTlwjx9"
     },
     "kernelspec": {
       "name": "python3",
@@ -39,6 +39,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p-cBCOknTNll"
+      },
+      "source": [
+        "### Add new text"
       ]
     },
     {
